# django_relay_endpoint

./: .gitignore  LICENSE  MANIFEST.in  pyproject.toml  readme.md  readme.rst  requirements.txt  setup.cfg  setup.py
django_graphene_endpoint.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
django_relay_endpoint/: __init__.py  apps.py
django_relay_endpoint.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
django_relay_endpoint/boilerplate/: boil_relay.py  boilers.py  utils.py
django_relay_endpoint/configurators/: field_conversions.py  fields.py  node.py  object_type_configurator.py  object_types.py  permissions.py  queries_configurator.py  schema.py
django_relay_endpoint/configurators/mutation_configurators/: --validate.py  abstract_class_configurator.py  abstract_mutation_class_configurator.py  create_mutation_configurator.py  delete_mutation_configurator.py  input_object_type_configurator.py  update_mutation_configurator.py
django_relay_endpoint/management/commands/: dre-from-json.py  dre-from-model.py  dre-from-models.py  dre-from-schema.py  dre_boil.py
django_relay_endpoint/management/commands/boilerplate/: boilers.py  utils.py
dummy_app/: requirements.txt
dummy_app/api/: schema.json
dummy_app/core/: settings.py
