[metadata]
name = django_graphene_endpoint
version = 0.1
description = Django addon to automatically configure graphql endpoints based on Django models.
long_description = file: README.rst
url = https://www.example.com/
author = Gevorg Hakobyan
author_email = gevorg.hakobyan@elawphant.am
license = file: LICENSE  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Topic :: Internet :: Django
    Topic :: Internet :: GraphQL
    Topic :: Internet :: Graphene
    Topic :: Internet :: Graphene Django

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.2.7
    graphene-django >= 3.3.0
    graphene-file-upload >= 1.3.0
    django_filter >= 23.3.0
    django-graphene-permissions >= 1.1.4
    